--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_NAME = "Expensetracker123",
-DB_USERNAME= "admin123",
-DB_PASSWORD="admin123",
-DB_HOST= "database-1.cfnoa3zmznem.us-east-1.rds.amazonaws.com",
+DB_NAME = "Expensetracker123"
+DB_USERNAME = "admin123"
+DB_PASSWORD="admin123"
+DB_HOST = "database-1.cfnoa3zmznem.us-east-1.rds.amazonaws.com"
 BUCKET_NAME = "expensetracker12334"
 IAM_USER_KEY = "AKIAXA5SPWPI44DQDMUA"
 IAM_USER_SECRET = "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"
